<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".SuccessBuyTicketAct">

    <ImageView
        android:id="@+id/icon_success_ticket"
        android:layout_width="276dp"
        android:layout_height="320dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_success_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/app_title_SBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mregular"
        android:text="@string/Selamatenikmati"
        android:textColor="@color/black_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_success_ticket" />

    <TextView
        android:id="@+id/app_subtitle_SBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mmedium"
        android:lineSpacingExtra="9dp"
        android:text="@string/selamat_datang"
        android:textAlignment="center"
        android:textColor="@color/gray_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title_SBT" />

    <Button
        android:id="@+id/btn_view_ticket"
        style="@style/btn_blue_primary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:text="@string/VIEWTICKETS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_subtitle_SBT" />

    <Button
        android:id="@+id/btn_my_dashboard"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_white_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/MYDASHBOARD"
        android:textColor="@color/gray_primary"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_ticket" />

</androidx.constraintlayout.widget.ConstraintLayout>