<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".TicketCheckoutAct">

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/bg_gradient_primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mregular"
        android:text="@string/BuyTicket"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/TicketDetails"
            android:textColor="@color/black_primary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/Checktheamountoftickets"
            android:textColor="@color/black_primary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#EDEDED" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="22dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/ic_ticket_buy" />

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="12dp">

                <TextView
                    android:id="@+id/nama_wisata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mregular"
                    android:text="@string/MenaraPisa"
                    android:textColor="@color/black_primary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="@string/PisaCityItaly"
                    android:textColor="@color/gray_primary"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_minus"
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:background="@drawable/btnmines" />

                <TextView
                    android:id="@+id/textjumlah_tiket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/mregular"
                    android:text="1"
                    android:textColor="@color/blue_primary"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/btn_plus"
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/btnpls" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ketentuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8dp"
            android:text="@string/dec_pisa_buy"
            android:textColor="@color/gray_primary"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/Pricing"
            android:textColor="@color/black_primary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/Yourcurrentbalance"
                android:textColor="@color/black_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textmybalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:paddingStart="5dp"
                android:text="@string/usdolar"
                android:textColor="@color/blue_primary"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#EDEDED" />


        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mlight"
                android:text="@string/totalprice"
                android:textColor="@color/black_primary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/texttotalharga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mmedium"
                android:paddingStart="50dp"
                android:text="$0"
                android:textAlignment="center"
                android:textColor="@color/greenPrimary"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_back_TC"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_layout_white"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/btn_pay_now_TC"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:contentDescription="@string/iconBack"
                    android:src="@drawable/ic_back"
                    tools:layout_editor_absoluteX="60dp"
                    tools:layout_editor_absoluteY="577dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_pay_now_TC"
                style="@style/btn_green_primary"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/PAYNOW" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/notice_uang"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/icon_tidak_cukup_uang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>