<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".SuccessRegiterAct">

    <ImageView
        android:id="@+id/icon_success"
        android:layout_width="276dp"
        android:layout_height="320dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_success_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/mregular"
        android:text="@string/kamuhebat"
        android:textColor="@color/black_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_success" />

    <TextView
        android:id="@+id/app_subtitle_SR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mmedium"
        android:lineSpacingExtra="9dp"
        android:text="@string/andaberhasil"
        android:textAlignment="center"
        android:textColor="@color/gray_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/btn_explore"
        style="@style/btn_blue_primary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:text="@string/explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_subtitle_SR" />

</androidx.constraintlayout.widget.ConstraintLayout>