<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary_blue"
    tools:context=".SigninAct">

    <ImageView
        android:contentDescription="@string/applogowhite"
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="110dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="22dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/usename_label"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xusername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/black_primary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="22dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:text="@string/password_label"
                android:textColor="@color/gray_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/xpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="12dp"
                android:textColor="@color/black_primary" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_signin_SA"
            style="@style/btn_blue_primary"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:text="@string/sigin"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_acccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/mlight"
        android:text="@string/CreateNewAccount"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>