<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    tools:context=".GetStartedAct">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/appbg_getstarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_overlay_getstarted"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/emblem_app"
        android:layout_width="68dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="153dp"
        android:contentDescription="@string/embelm"
        android:src="@drawable/emblemwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="107dp"
        android:fontFamily="@font/mregular"
        android:lineSpacingExtra="9dp"
        android:text="@string/discovery"
        android:textColor="#FFF"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emblem_app" />

    <Button
        android:id="@+id/bt_signin"
        style="@style/btn_blue_primary"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="48dp"
        android:text="@string/sigin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_app" />

    <Button
        android:id="@+id/btn_new_account_create"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_white_primary"
        app:backgroundTint="@color/white"
        android:fontFamily="@font/mmedium"
        android:text="@string/newacnt"
        android:textColor="@color/gray_primary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_signin" />



</androidx.constraintlayout.widget.ConstraintLayout>